force-app/main/default/objects/Apttus_Config2__LineItemRollup__c/fields/Apttus_Config2__FieldExpressionId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__FieldExpressionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Expression</label>
    <referenceTo>Apttus_Config2__FieldExpression__c</referenceTo>
    <relationshipLabel>Line Item Rollups</relationshipLabel>
    <relationshipName>LineItemRollups</relationshipName>
    <type>Lookup</type>
</CustomField>