force-app/main/default/objects/Apttus_Config2__LineItemRollup__c/fields/Apttus_Config2__GroupedByDescription__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__GroupedByDescription__c</fullName>
    <label>Grouped By Description</label>
    <length>25</length>
    <type>Text</type>
</CustomField>