force-app/main/default/objects/Apttus_Config2__LineItemRollup__c/fields/Apttus_Config2__LineItemId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__LineItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Line Item</label>
    <referenceTo>Apttus_Config2__LineItem__c</referenceTo>
    <relationshipLabel>Lineitem Rollups</relationshipLabel>
    <relationshipName>LineItemRollups</relationshipName>
    <type>Lookup</type>
</CustomField>