force-app/main/default/objects/Apttus_Config2__LineItemRollup__c/fields/Apttus_Config2__TotalQuantity__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__TotalQuantity__c</fullName>
    <description>Holds total line item quantity resulting from rollup expression.</description>
    <inlineHelpText>Holds total line item quantity resulting from rollup expression.</inlineHelpText>
    <label>Total Quantity</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>